// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for a basic list 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #586ccf;
  outline-offset: 2px;
}

.c3 {
  margin-bottom: 0.2rem;
}

.c2 {
  list-style: unset;
  list-style-type: none;
}

.c2 .c2 {
  margin-left: 1rem;
}

<div
  class="c0 c1"
>
  <ul
    class="c2 c1"
  >
    <li
      class="c3 c1"
    >
      Item 1
    </li>
    <li
      class="c3 c1"
    >
      Item 2
    </li>
    <li
      class="c3 c1"
    >
      Item 3
    </li>
    <li
      class="c3 c1"
    >
      Item 4
    </li>
  </ul>
</div>
`;

exports[`renders correctly for a list with styles 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #586ccf;
  outline-offset: 2px;
}

.c3 {
  margin-bottom: 0.2rem;
}

.c2 {
  list-style: unset;
  list-style-type: none;
}

.c2 .c2 {
  margin-left: 1rem;
}

<div
  class="c0 c1"
>
  <div>
    <ul
      class="c2 c1"
      style="list-style-type: disc; list-style-position: inside;"
    >
      <li
        class="c3 c1"
      >
        Item 1
      </li>
      <li
        class="c3 c1"
      >
        Item 2
      </li>
    </ul>
    <ul
      class="c2 c1"
      style="list-style-type: circle; list-style-position: inside;"
    >
      <li
        class="c3 c1"
      >
        Item 1
      </li>
      <li
        class="c3 c1"
        style="list-style-type: georgian;"
      >
        Item 2
      </li>
      <ul
        class="c2 c1"
        style="list-style-type: circle;"
      >
        <li
          class="c3 c1"
        >
          Item 1
        </li>
        <li
          class="c3 c1"
        >
          Item 2
        </li>
      </ul>
    </ul>
  </div>
</div>
`;

exports[`renders correctly for horizontal lists 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #586ccf;
  outline-offset: 2px;
}

.c3 {
  margin-bottom: 0.2rem;
}

.c2 {
  list-style: unset;
  list-style-type: none;
}

.c2 .c2 {
  margin-left: 1rem;
}

.c2 li {
  display: inline-block;
  margin-right: 1rem;
  margin-bottom: unset;
}

<div
  class="c0 c1"
>
  <div>
    <ul
      class="c2 c1"
    >
      <li
        class="c3 c1"
      >
        Item 1
      </li>
      <li
        class="c3 c1"
      >
        Item 2
      </li>
      <li
        class="c3 c1"
      >
        Item 3
      </li>
      <li
        class="c3 c1"
      >
        Item 4
      </li>
    </ul>
  </div>
</div>
`;

exports[`renders correctly for ordered lists 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #586ccf;
  outline-offset: 2px;
}

.c3 {
  margin-bottom: 0.2rem;
}

.c2 {
  list-style: unset;
  list-style-type: none;
}

.c2 .c2 {
  margin-left: 1rem;
}

.c2 {
  list-style-type: decimal;
}

.c2 .c2 {
  list-style-type: lower-alpha;
}

.c2 .c2 .c2 {
  list-style-type: lower-roman;
}

<div
  class="c0 c1"
>
  <div>
    <ol
      class="c2 c1"
      style="list-style-position: inside;"
    >
      <li
        class="c3 c1"
      >
        Item 1
      </li>
      <li
        class="c3 c1"
      >
        Item 2
      </li>
      <ol
        class="c2 c1"
      >
        <li
          class="c3 c1"
        >
          Item 3
        </li>
        <ol
          class="c2 c1"
        >
          <li
            class="c3 c1"
          >
            Item 4
          </li>
        </ol>
      </ol>
    </ol>
  </div>
</div>
`;
